# PowerAtlas

./: .gitignore  AGENTS.md  LICENSE  README.md  _check_backend.py  pyproject.toml
_proto/: poweratlas-icon-feedback.html  variant_d.html  variant_e.html
_proto/poweratlas-icon-pack-r2-05/: asset-manifest.json  brand-readme.md  review-selected-r2-05.html
_proto/poweratlas-icon-pack-r2-05-centered/: asset-manifest.json  brand-readme.md
_proto/poweratlas-icon-pack-r2-05-optical-centered/: asset-manifest.json  brand-readme.md  review-optical-centered-r2-05.html
_proto/poweratlas-icon-pack-r2-05-safe-padding/: review-safe-padding-r2-05.html
memory/: MEMORY.md
plans/: 260617_KIRO_ORCHESTRATOR_V1.md  260618_FIX_QTEST_VERIFIED_DEFECTS.md  260618_SESSION_PRELOAD_CACHE.md  260619_CUSTOM_LAUNCHERS_ICONS_TAIL_TABTITLE.md  260619_RENAME_TO_POWERATLAS.md  260629_ICON_PACK_INTEGRATION.md  260630_LINUX_SUPPORT.md  260630_PEEK_WINDOW.md  260701_MULTI_PROVIDER_TABS_AND_LAUNCH.md  260701_PROVIDER_LAUNCHER_UNIFICATION.md  ROADMAP.md
plans/done/: 260618-1901_SESSION_PRELOAD_CACHE.md  260618-1922_FIX_QTEST_VERIFIED_DEFECTS.md  260618-1924_KIRO_ORCHESTRATOR_V1.md  260621-1705_CUSTOM_LAUNCHERS_ICONS_TAIL_TABTITLE.md  260629-1901_ICON_PACK_INTEGRATION.md  260630-1456_LINUX_SUPPORT.md  260630-1607_PEEK_WINDOW.md  260701-1817_MULTI_PROVIDER_TABS_AND_LAUNCH.md  260701-2250_PROVIDER_LAUNCHER_UNIFICATION.md
plans/tests/: 260618_KIRO_ORCHESTRATOR.md  HARNESS.md
tests/: test_autostart.py  test_config.py  test_data.py  test_launcher.py  test_peek.py  test_tray.py  test_web.py
(+49 files in other folders)
