[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "power-atlas"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "pystray>=0.19",
    "Pillow>=10.0",
    "pywin32>=306; sys_platform == 'win32'",
    "PyGObject>=3.42,<3.50; sys_platform == 'linux'",
    "python-multipart>=0.0.7",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.3"]

[project.scripts]
power-atlas = "power_atlas.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
power_atlas = ["static/**", "templates/**"]
